[gd_scene load_steps=22 format=2]

[ext_resource path="res://sprites/AH_SpriteSheet_People1.png" type="Texture" id=1]
[ext_resource path="res://scripts/guard.gd" type="Script" id=2]
[ext_resource path="res://scripts/state machine/state_machine.gd" type="Script" id=3]
[ext_resource path="res://scripts/state machine/guard_states/guard_idle.gd" type="Script" id=4]
[ext_resource path="res://scripts/state machine/guard_states/guard_move.gd" type="Script" id=5]
[ext_resource path="res://scripts/state machine/guard_behaviour/guard_chase.gd" type="Script" id=6]
[ext_resource path="res://scripts/state machine/guard_behaviour/guard_seek.gd" type="Script" id=7]
[ext_resource path="res://scripts/state machine/guard_behaviour/guard_patrol.gd" type="Script" id=8]
[ext_resource path="res://sprites/AH_Sprite_People_1_normal_1.png" type="Texture" id=9]
[ext_resource path="res://occluder_person.tres" type="OccluderPolygon2D" id=10]
[ext_resource path="res://audio/SFX/FX01.wav" type="AudioStream" id=11]
[ext_resource path="res://sprites/exclamation mark.png" type="Texture" id=12]
[ext_resource path="res://scripts/draw_guard_node.gd" type="Script" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
resource_name = "guard_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("guard_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("guard_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("guard_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
resource_name = "guard_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("guard_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 60.0

[sub_resource type="CircleShape2D" id=7]
radius = 60.0

[sub_resource type="Animation" id=8]
resource_name = "alarm_anim"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7.444, 0 ), Vector2( -7.444, -8.28117 ), Vector2( -7.444, -13.0658 ), Vector2( -7.444, -8.28117 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/exclamation_mark:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="guard" type="KinematicBody2D"]
position = Vector2( 271.732, 203.57 )
collision_layer = 8
collision_mask = 33
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="guard_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
normal_map = ExtResource( 9 )
vframes = 4
hframes = 3
region_enabled = true
region_rect = Rect2( 96, 64, 48, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/guard_down = SubResource( 2 )
anims/guard_left = SubResource( 3 )
anims/guard_right = SubResource( 4 )
anims/guard_up = SubResource( 5 )

[node name="detect_radius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_radius"]
shape = SubResource( 6 )

[node name="player_detection" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
shape = SubResource( 7 )

[node name="Inventory" type="Node" parent="."]

[node name="sword dummy" type="Node" parent="Inventory"]

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 3 )
start_state = NodePath("move")

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource( 4 )

[node name="move" type="Node" parent="state_machine"]
script = ExtResource( 5 )

[node name="behaviour_tree" type="Node" parent="."]
script = ExtResource( 3 )
start_state = NodePath("patrol")

[node name="patrol" type="Node" parent="behaviour_tree"]
script = ExtResource( 8 )

[node name="chase" type="Node" parent="behaviour_tree"]
script = ExtResource( 6 )

[node name="seek" type="Node" parent="behaviour_tree"]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="behaviour_tree/seek"]
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = ExtResource( 10 )

[node name="draw_node" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -7.444, -8.28117 )
scale = Vector2( 1.77825, 1.62451 )

[node name="gui_animation" type="AnimationPlayer" parent="."]
anims/alarm_anim = SubResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="exclamation_mark" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 13.0
margin_bottom = 12.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="detect_radius" to="." method="_on_detect_radius_area_entered"]
[connection signal="area_exited" from="detect_radius" to="." method="_on_detect_radius_area_exited"]
[connection signal="body_entered" from="player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="player_detection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="behaviour_tree/seek/Timer" to="behaviour_tree/seek" method="_on_Timer_timeout"]
